[package]
name = "ianaio-timers"
description = "IanaIO crate for working with JavaScript timers"
version = "0.1.1"
authors = ["Jaroslaw Cichon <dev.iana.io> IanaIO Rust and WebAssembly Working Group"]
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
documentation = "https://docs.iana.io/rustwasm/timers"
repository = "https://github.com/ianaio/timers"
homepage = "https://rustwasm.iana.io/timers/"
categories = ["api-bindings", "asynchronous", "wasm"]
rust-version = "1.80"

[package.metadata.docs.rs]
features = ["futures"]

[dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3.68"
futures-core = { version = "0.3.30", optional = true }
futures-channel = { version = "0.3.30", optional = true }

[features]
default = []
futures = ["futures-core", "futures-channel"]


[dev-dependencies]
wasm-bindgen-futures = "0.4.41"
wasm-bindgen-test = "0.3.41"
futures-util = "0.3.30"

